Fix chart margin on mobile.

--- a/marko/src/style.scss
+++ b/marko/src/style.scss
@@ -147,7 +147,7 @@ body {
 .chart {
   width: 100%;
   height: 100%;
-  margin: .375em;
+  margin: .375em 0;
   background-color: darken(white, 7%);
   padding: 0.12em;
   border-radius: 4.5px;
@@ -165,6 +165,7 @@ body {
   }
 
   @media (min-width: $breakpoint-small) {
+    margin: .375em;
     flex: 1 1 calc(50% - 0.75em);
 
     &:nth-child(even) {
